--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
     </div>
     <div class="row">
+      <h1>Hello world!</h1>
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
           <h1></h1>
