--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 
   <!-- tailwind css -->
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+
+  <!-- tailwind component -->
+  <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
 </head>
 
-<body>
+<body class="bg-gray-200">
   <header class="w-10/12 mx-auto md:w-3/12">
 
     <form action="#" class="pt-28 mb-16">
@@ -108,9 +111,45 @@
         </div>
       </div>
     </div>
+
+    <section>
+      <!-- modal body -->
+      <!-- Default Modal -->
+      <div id="medium-modal" tabindex="-1"
+        class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full">
+        <div class="relative p-4 w-full max-w-lg h-full md:h-auto">
+          <!-- Modal content -->
+          <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <!-- Modal header -->
+            <div class="flex justify-between items-center p-5 rounded-t border-b dark:border-gray-600">
+              <h3 class="text-xl font-medium text-gray-900 dark:text-white">
+                Default modal
+              </h3>
+              <button type="button"
+                class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                data-modal-toggle="medium-modal">
+                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </button>
+            </div>
+            <!-- Modal body -->
+            <div class="p-6 space-y-6">
+              
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
   <footer></footer>
 
+  <!-- tailwind component -->
+  <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
 </body>
