finally requirment problem solve done

--- a/index.html
+++ b/index.html
@@ -137,9 +137,16 @@
             </div>
             <!-- Modal body -->
             <div class="p-6 space-y-6">
-              
+              <div>
+                <div class="w-2/4 mx-auto">
+                  <img id="img" src="" alt="" >
+                </div>
+                <p id="title" class="text-center"></p>
+                <p id="category" class="text-center"></p>
+                <p id="description" class="text-center"></p>
+              </div>
             </div>
-            
+
           </div>
         </div>
       </div>
